# yolov3-opencv

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: darknet.h
lib/darknet_so/: CMakeLists.txt
lib/darknet_so/.kdev4/: part_1.kdev4
lib/darknet_so/src/: image.c
src/: ImageDetect.cpp  ImageDetect.h  main.cpp  test_func.cpp  test_func.h
